hide product types without images

--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -56,7 +56,7 @@
     }
     @if (Model.CategoryModel.CatalogModel.CatalogItems.Any())
     {
-        <div class="news-heading text-center">
+        <div id="todos" class="news-heading text-center">
             <h2>Todos os Produtos</h2>
             <img class="separator" src="~/images/barra-coracao.png" />
         </div>
