--- a/src/Web/DamaWeb/Pages/Search/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Search/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Procurar";
 }
 
-<p class="title">Resultados para @Model.SearchFor</p>
+<p id="todos" class="title">Resultados para @Model.SearchFor</p>
 
     <div class="news-heading text-center">
         <img class="separator" src="~/images/barra-coracao.png" />
