--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <p class="title">@Model.CatalogTypeName</p>
 
-<div class="news-heading text-center">
+<div id="todos" class="news-heading text-center">
     <h2>Todos os Produtos</h2>
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
