--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -9,7 +9,7 @@
     </div>
     <div class="text-center my-3 my-sm-3 mt-md-3 mb-md-3">
         <img class="separator"  src="~/images/barra-coracao.png" />
-    </div>r
+    </div>
 
     @if (Model.ProductReferences.Any())
     {
