implement shipping cost in product type

--- a/src/Web/Backoffice/Pages/ProductType/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Delete.cshtml
@@ -57,6 +57,18 @@
         <dd>
             @Html.DisplayFor(model => model.ProductTypeModel.Price)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.AdditionalTextPrice)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.AdditionalTextPrice)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.ShippingCost)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.ShippingCost)
+        </dd>
         <dd>
             <img src="@Model.ProductTypeModel.PictureUri" class="img-responsive" />
         </dd>
