--- a/src/Web/Backoffice/Pages/ProductType/Index.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Index.cshtml
@@ -37,6 +37,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ProductTypesModel[0].DeliveryTimeUnit)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductTypesModel[0].ShippingCost)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -66,6 +69,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DeliveryTimeUnit)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ShippingCost)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
