--- a/src/Web/DamaWeb/Pages/Order/Detail.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Detail.cshtml
@@ -128,13 +128,14 @@
         {
             <section class="esh-orders_detail-section esh-orders_detail-section--right mt-3">
                 <article class="esh-orders_detail-titles esh-basket-titles--clean row">
-                    <section class="esh-orders_detail-title col-8"></section>
-                    <small><section class="esh-orders_detail-title col-12">Despesas de Envio</section></small>
+                    <section class="esh-orders_detail-title d-none d-sm-block col-sm-7"></section>
+                    <section class="esh-orders_detail-title col-7 col-sm-3 text-sm-right"><small>Despesas de Envio</small></section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--mark col-4 col-sm-2 text-nowrap">@Model.OrderDetails.ShippingCost €</section>
                 </article>
 
                 <article class="esh-orders_detail-items row">
                     <section class="esh-orders_detail-item col-9"></section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--mark col-2 text-right text-nowrap">@Model.OrderDetails.ShippingCost €</section>
+                    
                 </article>
             </section>
 
@@ -142,13 +143,9 @@
 
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles esh-basket-titles--clean row">
-                <section class="esh-orders_detail-title col-sm-8"></section>
-                <section class="esh-orders_detail-title col-sm-10 text-sm-right">TOTAL</section>
-            </article>
-
-            <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-sm-9"></section>
-                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-sm-2 text-sm-right text-nowrap">@Model.OrderDetails.Total €</section>
+                <section class="esh-orders_detail-title d-none d-sm-block col-sm-7"></section>
+                <section class="esh-orders_detail-title col-7 col-sm-3 text-sm-right">TOTAL</section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-4 col-sm-2 text-nowrap">@Model.OrderDetails.Total €</section>
             </article>
         </section>
     </div>
