--- a/src/Web/Backoffice/Pages/Products/References/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/References/Create.cshtml
@@ -13,10 +13,10 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                    <label asp-for="CatalogReference.CatalogItemId" class="control-label"></label>
-                    <select asp-for="CatalogReference.CatalogItemId" class ="form-control" asp-items="ViewBag.CatalogItemId"></select>
-                </div>*@
+            <div class="form-group">
+                <label asp-for="CatalogReference.LabelDescription">Label</label>
+                <input asp-for="CatalogReference.LabelDescription" class="form-control" >
+            </div>
             <div class="form-group">
                 <label asp-for="CatalogReference.ReferenceCatalogItemId" class="control-label"></label>
                 <select asp-for="CatalogReference.ReferenceCatalogItemId" class="form-control" asp-items="ViewBag.ReferenceCatalogItemId"></select>
