--- a/src/Web/Backoffice/Pages/Products/References/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/References/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.CatalogReference.LabelDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatalogReference.LabelDescription)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CatalogReference.CatalogItem)
         </dt>
         <dd>
