--- a/src/Web/Backoffice/Pages/Products/References/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/References/Edit.cshtml
@@ -13,21 +13,21 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                    <label asp-for="CatalogReference.CatalogItemId" class="control-label"></label>
-                    <select asp-for="CatalogReference.CatalogItemId" class="form-control" asp-items="ViewBag.CatalogItemId"></select>
-                    <span asp-validation-for="CatalogReference.CatalogItemId" class="text-danger"></span>
-                </div>*@
             <div class="form-group">
-                <label asp-for="CatalogReference.ReferenceCatalogItemId" class="control-label"></label>
+                <label asp-for="CatalogReference.LabelDescription">Label</label>
+                <input asp-for="CatalogReference.LabelDescription" class="form-control">
+            </div>
+            <div class="form-group">
+                <label asp-for="CatalogReference.ReferenceCatalogItemId" class="control-label">Produto Relacionado</label>
                 <select asp-for="CatalogReference.ReferenceCatalogItemId" class="form-control" asp-items="ViewBag.ReferenceCatalogItemId"></select>
                 <span asp-validation-for="CatalogReference.ReferenceCatalogItemId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="hidden" asp-for="CatalogReference.Id" />
                 <input type="hidden" asp-for="CatalogReference.CatalogItemId" />
+                <input type="hidden" asp-for="OriginalLabelReference" />
                 <input type="hidden" asp-for="OriginalReference" />
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Gravar" class="btn btn-default" />
             </div>
         </form>
     </div>
