add not found and error messages

--- a/src/Web/DamaWeb/Pages/NotFound.cshtml
+++ b/src/Web/DamaWeb/Pages/NotFound.cshtml
@@ -1,15 +1,17 @@
 ﻿@page
-@model ErrorModel
+@model NotFoundModel
 @{
-    ViewData["Title"] = "Erro";
+    ViewData["Title"] = "Ops";
 }
 <h2 class="dama-heading-normal-font">Ops!</h2>
 
 <div class="row">
     <div class="offset-sm-3 col-sm-6">
-        <img src="~/images/dama-erro.jpg" class="img-fluid" alt="Dama no Jornal" />
+        <img src="~/images/oooops.png" class="img-fluid" alt="Dama no Jornal"  />
     </div>
 </div>
 <div class="row justify-content-center mt-5">
     <a asp-page="/Index" class="btn btn-primary" role="button">Clique aqui para voltar à loja!</a>
 </div>
+
+
