--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -3,6 +3,10 @@
 @model IndexModel
 @{
     ViewData["Title"] = @Model.CategoryModel.CategoryName;
+    if (!string.IsNullOrEmpty(HttpContext.Request.Query["p"]))
+    {
+        ViewBag.NoIndex = true;
+    }
 }
 
 <p class="title">@Model.CategoryModel.CategoryName</p>
